# Terminal_gify

./: CMakeLists.txt  README.md  change_default.sh  dependencies.sh
include/: heavy_terminal.h
resources/: heavy_terminal.desktop
src/: heavy_terminal.cpp  main.cpp
